--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/xingkongs/react-test-1/issues"
   },
-  "homepage": "https://github.com/xingkongs/react-test-1#readme"
+  "homepage": "https://github.com/xingkongs/react-test-1#readme",
+  "devDependencies": {
+    "awesome-typescript-loader": "^5.2.1",
+    "typescript": "^3.4.5",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1"
+  }
 }
