--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
   },
   "homepage": "https://github.com/xingkongs/react-test-1#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
     "@types/react": "^16.8.14",
     "@types/react-dom": "^16.8.4",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-jest": "^24.7.1",
     "cross-env": "^5.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.7.1",
+    "react-test-renderer": "^16.8.6",
     "typescript": "^3.4.5",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
