--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/jest": "^24.0.11",
     "@types/react": "^16.8.14",
     "@types/react-dom": "^16.8.4",
+    "@types/react-test-renderer": "^16.8.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^24.7.1",
     "cross-env": "^5.2.0",
