tsconfig 添加types、lib目录include 告诉ts两个目录是源文件

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,10 @@
     "esModuleInterop": true,
     "noUnusedLocals": true
   },
+  "include": [
+    "lib/**/*",
+    "types/**/*"
+  ],
   "exclude": [
     "node_modules",
     "build",
