--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^24.7.1",
     "cross-env": "^5.2.0",
+    "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.7.1",
     "react-test-renderer": "^16.8.6",
+    "scss-loader": "^0.0.1",
+    "style-loader": "^0.23.1",
     "svg-sprite-loader": "^4.1.3",
     "ts-jest": "^24.0.2",
     "typescript": "^3.4.5",
