--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.7.1",
+    "node-sass": "^4.11.0",
     "react-test-renderer": "^16.8.6",
+    "sass-loader": "^7.1.0",
     "scss-loader": "^0.0.1",
     "style-loader": "^0.23.1",
     "svg-sprite-loader": "^4.1.3",
