--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "dist/lib/index",
   "scripts": {
     "test": "cross-env NODE_ENV=test jest --config=jest.config.js --runInBand",
+    "ci": "cross-env NODE_ENV=test jest --config=jest.config.ci.js",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js"
   },
@@ -36,6 +37,7 @@
     "enzyme-adapter-react-16": "^1.12.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.7.1",
+    "jest-junit": "^6.3.0",
     "node-sass": "^4.11.0",
     "react-test-renderer": "^16.8.6",
     "sass-loader": "^7.1.0",
