--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,3 +66,10 @@ workflows:
       - publish:
           requires:
             - build
+          filters:
+            # ignore any commit on any branch by default
+            branches:
+              ignore: /.*/
+            # only act on version tags
+            tags:
+              only: /^v[0-9]+(\.[0-9]+)*$/
