--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jest": "^24.7.1",
     "jest-junit": "^6.3.0",
     "node-sass": "^4.11.0",
+    "raw-loader": "^2.0.0",
     "react-test-renderer": "^16.8.6",
     "sass-loader": "^7.1.0",
     "scss-loader": "^0.0.1",
